# TPMS-Characterization

./: CMakeLists.txt  LICENSE.md  README.md  input.txt
Legacy/: helper.cuh  main.cu
lib/: Disc3D_SF_PB.hpp  GPU_kernels.cuh  TPMS_definitions.hpp  TPMS_helpers.hpp  TauSim.hpp  constants.hpp  data_structures.hpp  output.hpp  sfSim.hpp  sizeDistributions.hpp  subDomainFF.hpp  surfaceArea.hpp  usrInput.hpp
lib/cpu_solvers/: cpuErrorHandler.hpp  cpuSolve.cpp  cpuSolvers.hpp
lib/cuda_solvers/: GPU_kernels.cuh  gpuSolve.cu
src/: helper.cuh  input.txt  main.cpp  main.cu
src_cuda/: GPU_kernels.cuh  cuda_structs.cuh  gpuSolve.cuh
tests/: saveTPMS.cpp
